--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mysql2": "^3.3.1",
-    "pug": "^2.0.3"
+    "mysql2": "^3.3.2",
+    "pug": "^2.0.3",
+    "sequelize": "^6.31.1"
   }
 }
